# rs-manga-parser

./: .gitmodules  Cargo.toml
parser_macro_derive/: Cargo.toml
src/: lib.rs  parser.rs
src/model/: manga.rs  scraper_queries.rs
src/plugin/: generic_query_parser.rs  madara.rs  manga_347.rs  manga_kakalot.rs  mangadex.rs  read_m.rs  reaper_scans.rs
tests/: test.rs
