[package]
name = "manga-parser"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "manga_parser"
path = "src/lib.rs"

[dependencies]
crabquery = { path = "crabquery" }
parser_macro_derive = { path = "parser_macro_derive" }
log = "0.4.17"
env_logger = "0.10.0"
lazy_static = "1.4.0"
regex = "1.7.0"
reqwest = "0.11.13"
urlencoding = "2.1.2"
chrono = "0.4.23"
async-trait = "0.1.60"
anyhow = "1.0.67"
futures = {version = "0.3.25"}
futures-util = {version = "0.3.25"}
serde = "1.0.151"
serde_json = {version = "1.0.90"}
tokio = {version = "1.23.0", features = ["macros", "rt-multi-thread"]}
mangadex-api = {version="1.3.0", features=["chrono", "multi-thread"]}
uuid = { version = "0.8.2", features = ["serde", "v4"] }
itertools = "0.10.5"
thiserror = "1.0.38"
